# CatCode.Service.TemplatingTemplates

./: README.md  catalog-entity.json
cookiecutter/python/: cookiecutter.json
cookiecutter/python/hooks/: service_name.py
cookiecutter/python/{{cookiecutter.service_name}}/: .gitignore  catcode.yaml  main.py  pyproject.toml  settings.py
cookiecutter/python/{{cookiecutter.service_name}}/docs/: index.md
cookiecutter/python/{{cookiecutter.service_name}}/tests/: test_dummy.py
entities/: application.json  catalog-entity.json  system.json  template.json  user.json
templates/: python-job.yaml
templates/schemas/v1/: software-template.yaml  template.yaml
